# medical-imaging

./: .gitignore  .zenodo.json  LICENSE  README.md  THEORY.md  pyproject.toml
docs/: medimg-tech-note.tex
examples/: 01_mri_cs.py  02_ct_sparse_view.py
medimg/: __init__.py  forward.py  metrics.py  phantoms.py  plotting.py  reconstruct.py  transforms.py
tests/: test_forward.py  test_reconstruct.py
