[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medimg"
version = "0.1.1"
description = "Compressed sensing reconstruction for accelerated MRI and sparse-view CT"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Abd'gafar Tunde Tiamiyu", email = "abdgafartunde@yahoo.com"},
]
keywords = [
    "compressed-sensing",
    "mri-reconstruction",
    "ct-reconstruction",
    "inverse-problems",
    "total-variation",
    "wavelet-sparsity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-image>=0.20",
    "PyWavelets>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["medimg*"]
